--- a/package.json
+++ b/package.json
@@ -13,36 +13,36 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "13.3.12",
-    "@angular/common": "13.3.12",
-    "@angular/core": "13.3.12",
-    "@angular/forms": "13.3.12",
-    "@angular/platform-browser": "13.3.12",
-    "@angular/platform-browser-dynamic": "13.3.12",
-    "@angular/router": "13.3.12",
+    "@angular/animations": "14.3.0",
+    "@angular/common": "14.3.0",
+    "@angular/core": "14.3.0",
+    "@angular/forms": "14.3.0",
+    "@angular/platform-browser": "14.3.0",
+    "@angular/platform-browser-dynamic": "14.3.0",
+    "@angular/router": "14.3.0",
     "@capacitor/clipboard": "1.0.7",
     "@capacitor/core": "3.4.0",
-    "@ionic-native/core": "5.27.0",
+    "@ionic-native/core": "^5.36.0",
     "@ionic-native/social-sharing": "5.27.0",
     "@ionic/angular": "6.0.5",
     "@ionic/pwa-elements": "^1.5.2",
     "core-js": "^3.6.5",
     "es6-promise-plugin": "4.2.2",
     "firebase": "^7.13.1",
-    "rxjs": "^6.5.5",
+    "rxjs": "7.4.0",
     "swiper": "8.0.2",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "0.1303.10",
-    "@angular-devkit/build-angular": "13.3.10",
-    "@angular-devkit/core": "13.3.10",
-    "@angular-devkit/schematics": "13.3.10",
-    "@angular/cli": "13.3.10",
-    "@angular/compiler": "13.3.12",
-    "@angular/compiler-cli": "13.3.12",
-    "@angular/language-service": "13.3.12",
+    "@angular-devkit/architect": "0.1402.11",
+    "@angular-devkit/build-angular": "14.2.11",
+    "@angular-devkit/core": "14.2.11",
+    "@angular-devkit/schematics": "14.2.11",
+    "@angular/cli": "14.2.11",
+    "@angular/compiler": "14.3.0",
+    "@angular/compiler-cli": "14.3.0",
+    "@angular/language-service": "14.3.0",
     "@capacitor/cli": "3.4.0",
     "@ionic/angular-toolkit": "^2.2.0",
     "@types/jasmine": "~3.6.0",
@@ -57,7 +57,7 @@
     "protractor": "~7.0.0",
     "ts-node": "^8.8.2",
     "tslint": "~6.1.0",
-    "typescript": "~4.6.4"
+    "typescript": "^4.8.4"
   },
   "description": "Build a photo gallery app that runs on iOS, Android, and the web - with just one codebase"
 }
