upgrade angular and other packes

--- a/package.json
+++ b/package.json
@@ -13,38 +13,38 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "14.3.0",
-    "@angular/common": "14.3.0",
-    "@angular/core": "14.3.0",
-    "@angular/forms": "14.3.0",
-    "@angular/platform-browser": "14.3.0",
-    "@angular/platform-browser-dynamic": "14.3.0",
-    "@angular/router": "14.3.0",
+    "@angular/animations": "15.2.8",
+    "@angular/common": "15.2.8",
+    "@angular/core": "15.2.8",
+    "@angular/forms": "15.2.8",
+    "@angular/platform-browser": "15.2.8",
+    "@angular/platform-browser-dynamic": "15.2.8",
+    "@angular/router": "15.2.8",
     "@capacitor/clipboard": "1.0.7",
     "@capacitor/core": "3.4.0",
     "@ionic-native/core": "^5.36.0",
     "@ionic-native/social-sharing": "5.27.0",
-    "@ionic/angular": "6.0.5",
+    "@ionic/angular": "^7.0.3",
     "@ionic/pwa-elements": "^1.5.2",
     "core-js": "^3.6.5",
     "es6-promise-plugin": "4.2.2",
     "firebase": "^7.13.1",
     "rxjs": "7.4.0",
-    "swiper": "8.0.2",
+    "swiper": "^9.2.3",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "0.1402.11",
-    "@angular-devkit/build-angular": "14.2.11",
-    "@angular-devkit/core": "14.2.11",
-    "@angular-devkit/schematics": "14.2.11",
-    "@angular/cli": "14.2.11",
-    "@angular/compiler": "14.3.0",
-    "@angular/compiler-cli": "14.3.0",
-    "@angular/language-service": "14.3.0",
+    "@angular-devkit/architect": "0.1502.6",
+    "@angular-devkit/build-angular": "15.2.6",
+    "@angular-devkit/core": "15.2.6",
+    "@angular-devkit/schematics": "15.2.6",
+    "@angular/cli": "15.2.6",
+    "@angular/compiler": "15.2.8",
+    "@angular/compiler-cli": "15.2.8",
+    "@angular/language-service": "15.2.8",
     "@capacitor/cli": "3.4.0",
-    "@ionic/angular-toolkit": "^2.2.0",
+    "@ionic/angular-toolkit": "^9.0.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^13.11.1",
