resolve dependency issues

--- a/package.json
+++ b/package.json
@@ -22,14 +22,12 @@
     "@angular/router": "15.2.8",
     "@capacitor/clipboard": "1.0.7",
     "@capacitor/core": "3.4.0",
-    "@ionic-native/core": "^5.36.0",
-    "@ionic-native/social-sharing": "5.27.0",
     "@ionic/angular": "^7.0.3",
     "@ionic/pwa-elements": "^1.5.2",
     "core-js": "^3.6.5",
     "es6-promise-plugin": "4.2.2",
     "firebase": "^7.13.1",
-    "rxjs": "7.4.0",
+    "rxjs": "^7.4.0",
     "swiper": "^9.2.3",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
